--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "sass": "^1.80.6",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.11.3"
     }
 }
